# Silmaril

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Silmaril/: CMakeLists.txt  PathConfig.inl
Silmaril/res/Shaders/: Viewport.frag.glsl  Viewport.vert.glsl
Silmaril/src/Silmaril/: Main.cpp  PCH.hpp  Types.hpp
Silmaril/src/Silmaril/Cameras/: Camera.cpp  Camera.hpp  Film.cpp  Film.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
Silmaril/src/Silmaril/Containers/: AABB.cpp  AABB.hpp  Bounds.hpp  Interaction.hpp
Silmaril/src/Silmaril/Core/: Application.cpp  Application.hpp  Events.hpp  JobSystem.cpp  JobSystem.hpp  KeyCodes.hpp  Logger.cpp  Logger.hpp  Window.cpp  Window.hpp
Silmaril/src/Silmaril/DSA/: PCG32.cpp  PCG32.hpp
Silmaril/src/Silmaril/Geometry/: BVH.cpp  BVH.hpp  GeometricPrimitive.cpp  GeometricPrimitive.hpp  Mesh.hpp  Model.cpp  Model.hpp  Primitive.hpp  Shape.hpp  Sphere.cpp
Silmaril/src/Silmaril/Integrators/: Integrator.hpp  RandomWalkIntegrator.cpp  RandomWalkIntegrator.hpp
Silmaril/src/Silmaril/Lights/: Light.hpp
Silmaril/src/Silmaril/Loaders/: MeshLoader.cpp  MeshLoader.hpp  ModelLoader.cpp  ModelLoader.hpp
Silmaril/src/Silmaril/Materials/: BSDF.hpp  Material.hpp  MatteMaterial.cpp  MatteMaterial.hpp  PBRMaterial.cpp  PBRMaterial.hpp
Silmaril/src/Silmaril/PBRT/: PBRT.cpp  PBRT.hpp
Silmaril/src/Silmaril/PBRT/Cameras/: Camera.hpp  Film.cpp  Film.hpp  PerspectiveCamera.cpp
Silmaril/src/Silmaril/PBRT/Containers/: AABB.cpp  Interaction.hpp  Ray.hpp
Silmaril/src/Silmaril/PBRT/Geometry/: BVH.cpp  BVH.hpp  GeometricPrimitive.cpp  GeometricPrimitive.hpp  Mesh.hpp  Model.cpp  Model.hpp  Primitive.hpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
Silmaril/src/Silmaril/PBRT/Integrators/: Integrator.cpp  Integrator.hpp  RandomWalkIntegrator.cpp  RandomWalkIntegrator.hpp
Silmaril/src/Silmaril/PBRT/Lights/: DiffusedAreaLight.cpp  DiffusedAreaLight.hpp  Light.hpp  PointLight.cpp  PointLight.hpp
Silmaril/src/Silmaril/PBRT/Loaders/: ModelLoader.cpp  ModelLoader.hpp
Silmaril/src/Silmaril/PBRT/Materials/: Material.hpp  PBRMaterial.cpp  PBRMaterial.hpp
Silmaril/src/Silmaril/PBRT/Samplers/: RandomSampler.cpp  RandomSampler.hpp  Sampler.cpp  Sampler.hpp  StratifiedSampler.cpp  StratifiedSampler.hpp
Silmaril/src/Silmaril/PBRT/Scene/: Scene.hpp
Silmaril/src/Silmaril/PBRT/Textures/: SolidTexture.hpp  Texture.hpp
Silmaril/src/Silmaril/Renderer/: Renderer.cpp  Renderer.hpp
Silmaril/src/Silmaril/Samplers/: RandomSampler.cpp  RandomSampler.hpp  Sampler.hpp
Silmaril/src/Silmaril/Scene/: Scene.hpp
Silmaril/src/Silmaril/Textures/: ImageTexture.cpp  ImageTexture.hpp  Texture.hpp
